# gaal

./: .gitignore  BACKLOG.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DESIGN.md  DOCS.md  ISSUES.md  PLAN.md  README.md  SKILL.md  SPEC-v010.md  TESTING.md  TESTS-E2E.md  TESTS.md  TODO-token-fix.md
_archive/: DESIGN.md  DOCS-v1.md  ISSUES-v010-dormant.md  ISSUES.md  PLAN.md  SKILL.md  SPEC-v010.md  TESTING.md  TESTS-E2E.md  TESTS.md
_workbench/: 2026-03-03-codex-audit.md
defaults/: com.gaal.index.plist  config.toml  gaal-cron-install.sh  handoff-prompt.md  migration-notes.md
docs/: README.md  agent-guide.md  architecture.md  formats.md  getting-started.md  migration.md
docs/commands/: attribution.md  drill-down.md  fleet-view.md  handoff.md  index-tags.md  search-recall.md  self-id.md
skill/: SKILL.md
skill/references/: exit-codes.md  troubleshooting.md  verb-reference.md
src/: config.rs  detection.rs  error.rs  lib.rs  linker.rs  main.rs  util.rs
src/commands/: active.rs  find.rs  handoff.rs  index.rs  inspect.rs  ls.rs  mod.rs  recall.rs  resolve.rs  runtime.rs  salt.rs  search.rs  show.rs  tag.rs  transcript.rs  who.rs
src/db/: mod.rs  queries.rs  schema.rs  schema.sql
src/discovery/: active.rs  claude.rs  codex.rs  discover.rs  gemini.rs  mod.rs  process.rs
src/model/: fact.rs  handoff.rs  mod.rs  session.rs  status.rs
src/output/: human.rs  json.rs  mod.rs
src/parser/: claude.rs  codex.rs  common.rs  event.rs  (+4 more)
tests/: integration.rs  run-all.sh  suite-1.sh  suite-2.sh  suite-3.sh  suite-4.sh  suite-5.sh  suite-6.sh  suite-7.sh  suite-8.sh
(+24 files in other folders)
