[package]
name = "gaal"
version = "0.1.0"
edition = "2021"
description = "Agent session observability CLI — like k9s for AI coding agents"
license = "MIT"
repository = "https://github.com/buildoak/gaal"
homepage = "https://github.com/buildoak/gaal"
keywords = ["ai", "agents", "observability", "claude", "codex"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
tantivy = "0.22"
toml = "0.8"
dirs = "5"
regex = "1"
libproc = "0.14"
rand = "0.9"

[profile.release]
lto = true
strip = true
